crates/monochange_core/src/snapshots/monochange_core____tests__render_release_notes_supports_monochange_and_keep_a_changelog_formats__keep_a_changelog.snap
---
source: crates/monochange_core/src/__tests.rs
expression: keep_a_changelog
---
## [1.2.3]

Grouped release for `sdk`.

### Changed

- add release automation
