crates/monochange_core/src/snapshots/monochange_core____tests__render_release_notes_supports_monochange_and_keep_a_changelog_formats__monochange.snap
---
source: crates/monochange_core/src/__tests.rs
expression: monochange
---
## 1.2.3

Grouped release for `sdk`.

### Changed

- add release automation
